force-app/main/default/objects/Territory_Map_Tag__c/Territory_Map_Tag__c.object-meta.xml
<CustomObject>
    <description>Represents the assignment of a tag to a territory map.</description>
    <label>Territory Map Tag</label>
    <nameField>
        <displayFormat>TMT-{00000}</displayFormat>
        <label>Territory Map Tag No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Map Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>