force-app/main/default/objects/Territory_Map_Tag__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The tag that is assigned to the map.</description>
    <inlineHelpText>The tag that is assigned to the map.</inlineHelpText>
    <label>Tag</label>
    <referenceTo>Tag__c</referenceTo>
    <relationshipLabel>Territory Map Tags</relationshipLabel>
    <relationshipName>Territory_Map_Tags</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>