force-app/main/default/objects/Territory_Map_Tag__c/fields/Tag_Category__c.field-meta.xml
<CustomField>
    <fullName>Tag_Category__c</fullName>
    <description>The category that this Tag exists within, providing context for its meaning.</description>
    <formula>Tag__r.Tag_Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The category that this Tag exists within, providing context for its meaning.</inlineHelpText>
    <label>Tag Category</label>
    <type>Text</type>
</CustomField>