force-app/main/default/objects/Territory_Map_Tag__c/fields/Territory_Map__c.field-meta.xml
<CustomField>
    <fullName>Territory_Map__c</fullName>
    <description>The territory map to which this tag is assigned.</description>
    <inlineHelpText>The territory map to which this tag is assigned.</inlineHelpText>
    <label>Territory Map</label>
    <referenceTo>Territory_Map__c</referenceTo>
    <relationshipLabel>Territory Map Tags</relationshipLabel>
    <relationshipName>Territory_Map_Tags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>